# minesweeper-SFML

./: .gitignore  CMakeLists.txt  README.md
Client/include/: Client.hpp  Lobby.hpp  inits.hpp  macros.hpp
Client/include/components/: click.hpp  text.hpp  tile.hpp
Client/include/events/: EndGame.hpp  Input.hpp  RevealTile.hpp
Client/include/listeners/: ClickListener.hpp  EndGame.hpp  RevealTile.hpp
Client/include/systems/: background.hpp  map.hpp  miner.hpp  text.hpp
Client/src/: Client.cpp  Lobby.cpp  inits.cpp  main.cpp
Client/src/listeners/: ClickListener.cpp  EndGame.cpp  RevealTile.cpp
Client/src/systems/: background.cpp  map.cpp  miner.cpp  text.cpp
Server/include/: Server.hpp  inits.hpp
Server/include/components/: client.hpp
Server/include/events/: EndGame.hpp  RevealTile.hpp  SendTile.hpp
Server/include/listeners/: EndGame.hpp  RevealTile.hpp  SendTile.hpp
Server/include/systems/: clients.hpp  map.hpp  winLoose.hpp
Server/src/: Server.cpp  inits.cpp  main.cpp
Server/src/listeners/: EndGame.cpp  RevealTile.cpp  SendTile.cpp
Server/src/systems/: clients.cpp  map.cpp  winLoose.cpp
Server/src/tools/: inRange.cpp  initGrid.cpp
include/: game.hpp  init.hpp
include/components/: click.hpp  tile.hpp
include/systems/: map.hpp  miner.hpp  winLoose.hpp
src/: game.cpp  init.cpp  main.cpp
src/systems/: background.cpp  map.cpp  miner.cpp  winLoose.cpp
